@@ -1,0 +1,28 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!-- Copyright 2012-2015 Rui Nuno Capela <rncbc@rncbc.org> -->
+<component type="desktop">
+ <id>drumkv1.desktop</id>
+ <metadata_license>GPL-2.0+</metadata_license>
+ <project_license>GPL-2.0+</project_license>
+ <name>drumkv1</name>
+ <summary>an old-school drumk-kit sampler</summary>
+ <description>
+  <p>drumkv1 is an old-school drum-kit sampler synthesizer
+  with stereo fx.</p>
+  <p>features:<ul>
+  <li>pure stand-alone JACK client with JACK-session, NSM and both JACK MIDI
+    and ALSA MIDI input support;</li>
+  <li>LV2 instrument plugin.
+    URI: http://drumkv1.sourceforge.net/lv2</li>
+  </ul></p>
+ </description>
+ <screenshots>
+  <screenshot type="default">
+   <image>http://drumkv1.sourceforge.net/image/drumkv1-screenshot1.png</image>
+   <caption>The main window showing the application in action</caption>
+  </screenshot>
+ </screenshots>
+ <url type="homepage">http://drumkv1.sourceforge.net</url>
+ <updatecontact>rncbc@rncbc.org</updatecontact>
+ <project_group>rncbc.org</project_group>
+</component>
